--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,55 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./pink.jpeg') 
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.box {
+  display: inline-block;       
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  width: 15px;
+  height: 15px;
+  margin-left: -1px;
+  margin-bottom: -1px;
+  }
+
+.off {
+  background-color: rgb(251, 242, 4);
+}
+
+.on {
+  background-color: rgb(248, 109, 153);
+}
+  
+.box:hover { 
+  background: #17ccf9;
+}
+
+.center {
+  margin: auto;
+  display: table;
+  margin-top: 10px;
+}
+
+.grid {
+  width: 150px;
+  line-height: 0;
+  margin: auto;
+  box-shadow: 0px 0px 75px rgb(255, 255, 255);
+  margin-top: 20px;
+}
+  
+h1, h2, h3, h4 {
+  box-shadow: 0px 0px 95px rgb(36, 38, 3);
+  color: rgb(238, 238, 48);
+  margin: auto;
+  text-align: center;
+  width: 50%;
+  margin-top: 10px;
+}
+
+h4 {
+  margin-top: 0px;
 }
